[gd_scene load_steps=5 format=3 uid="uid://dca88eh6c0qrc"]

[ext_resource type="Script" uid="uid://dl8muomdyln1g" path="res://src/topscenes/world_maptiles.gd" id="1_1b85c"]
[ext_resource type="TileSet" uid="uid://n1yasqcqq017" path="res://assets/tilesets/tileset.tres" id="2_vehs4"]
[ext_resource type="Script" uid="uid://bhvqu25bi6dnv" path="res://src/topscenes/map_tiles.gd" id="3_khffx"]
[ext_resource type="TileSet" uid="uid://b5t1cjso2kfm7" path="res://assets/tilesets/danger_shades.tres" id="4_vehs4"]

[node name="WorldMapTiles" type="Node2D"]
script = ExtResource("1_1b85c")

[node name="MapTiles" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_vehs4")
script = ExtResource("3_khffx")

[node name="DangerLevels" type="TileMapLayer" parent="."]
tile_set = ExtResource("4_vehs4")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
